--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     header {
       padding: 20px;
+      color: #c5c5c5;
       box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
       position: relative; /* Ensure header stays above the video */
       z-index: 1; /* Set z-index to be above the video */
@@ -34,15 +35,15 @@
     h1 {
       margin: 0;
       font-size: 44px; /* Increased font size by 10 */
-      color: #ff8c00; /* Orange text color */
+      color: #505050; /* Orange text color */
       font-family: 'Times New Roman', serif; /* Set font to Times New Roman */
     }
 
     img {
       position: absolute;
-      top: 15px;
-      left: 30px;
-      max-width: 180px; /* Adjust the size of the logo as needed */
+      top: 180px;
+      left: 150px;
+      max-width: 400px; /* Adjust the size of the logo as needed */
     }
 
     .content {
@@ -56,7 +57,7 @@
     }
 
     button {
-      background-color: #ff8c00;
+      background-color: #505050;
       color: #fff;
       padding: 15px 30px;
       font-size: 18px;
@@ -67,8 +68,8 @@
     }
     .content {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 60%;
+  left: 60%;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
@@ -84,17 +85,19 @@
   </video> -->
 
   <header>
-    <img src="logo.jpg" alt="Logo">
     <h1>ABI METALS</h1>
   </header>
-
-  <div class="content">
-    <button onclick="makeBilling()">Make Invoice</button>
+  <div style="flex-direction: column;">
+    <div style="display: flex;">
+    <img src="logo.jpg" alt="Logo" >
+  </div>
+  <div class="content" style="display: flex;">
+    <button onclick="makeBilling()">Generate Invoice</button>
     <button onclick="viewStock()">View Stock</button>
-    <button onclick="viewIncome()">Income</button>
+    <button onclick="viewIncome()">Sales</button>
     <!-- <button onclick="viewreport()">Report</button> -->
   </div>
-
+</div>
 <script>
   function makeBilling() {
     window.location.href = '/staff'; // Redirect to invoice.html
